hphp/hack/test/typecheck/shape_idx4.php.exp
File "shape_idx4.php", line 7, characters 15-16:
Invalid argument (Typing[4110])
  File "Shapes.hhi", line 37, characters 6-15:
  Expected `shape(...)`
  File "shape_idx4.php", line 6, characters 15-17:
  But got `int`
File "shape_idx4.php", line 7, characters 15-16:
Invalid argument (Typing[4110])
  File "shape_idx4.php", line 7, characters 15-16:
  Expected `shape(?'x' => [unresolved], ...)` because `Shapes::idx` expects a shape
  File "shape_idx4.php", line 6, characters 15-17:
  But got `int`
