hphp/hack/test/typecheck/shape_idx4.php
<?hh // strict

/**
 * Argument is not a shape
 */
function test(int $s): void {
  Shapes::idx($s, 'x');
}
